tests/snapshots/options__opt_nth_range_dec@002.snap
---
source: tests/options.rs
description: "input: items [\"f1,f2,f3,f4\"]\noptions: --delimiter , --nth 3..2\nafter:\n  @char '1'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> 1                                                                             "
cursor: (24, 4)
