tests/snapshots/options__opt_null_delimiter_nth@001.snap
---
source: tests/options.rs
description: "input: bytes b\"a\\0b\\0c\"\noptions: --delimiter \\x00 --nth 2"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> abc                                                                           "
"  1/1                                                                        0/0"
">                                                                               "
cursor: (24, 3)
